# tarmac-trace-utilities

./: .clang-format  .gitignore  CMakeLists.txt  README.rst
.github/workflows/: macos-13.yml  macos-14.yml  macos-15.yml  ubuntu-1804-clang.yml  ubuntu-1804-gcc.yml  ubuntu-2004-clang.yml  ubuntu-2004-gcc.yml  ubuntu-2004.yml  ubuntu-2204.yml  ubuntu-2404.yml
browser/: CMakeLists.txt  browse.cpp  browse.hh  curses.cpp  gtk.cpp  main-browser.cpp  wx.cpp
cmake/: TarmacTraceUtilitiesConfig.cmake.in  cmake.h.in  unix.cmake  windows.cmake
doc/: conf.py  index.rst  tarmac-browser.ttyrec  web-visualizer-plan.md
include/libtarmac/: argparse.hh  callinfo.hh  calltree.hh  disktree.hh  elf.hh  expr.hh  image.hh  index.hh  index_ds.hh  intl.hh  json.hh  memtree.hh  misc.hh  parser.hh  platform.hh.in  registers.hh  reporter.hh  tarmacutil.hh
include/libtarmac/utils/: stopwatch.hh
lib/: CMakeLists.txt  argparse.cpp  btod.cpp  callinfo.cpp  calltree.cpp  elf.cpp  expr.cpp  format.cpp  image.cpp  index.cpp  index_ds.cpp  json.cpp  misc.cpp  parser.cpp  registers.cpp  tarmacutil.cpp
lib/platform/: unix.cpp  windows.cpp
po/: CMakeLists.txt  mo2msgres.py  tarmac-trace-utilities.pot  update-pot.py
po/en_GB@rot13/: CMakeLists.txt  tarmac-trace-utilities.po
po/en_GB@wide/: CMakeLists.txt  tarmac-trace-utilities.po
po/fr/: tarmac-trace-utilities.po
samples/: calculator-aarch32-es-ld-st-style.tarmac  calculator-aarch32-fastmodel.tarmac  calculator-aarch32.elf  calculator-aarch64-es-ld-st-style.tarmac  calculator-aarch64-fastmodel.tarmac  calculator-aarch64-gem5.tarmac  calculator-aarch64.elf
samples/source/: .gitignore  CMakeLists.txt  armclang-aarch32-v7a-be.cmake  armclang-aarch32-v7a-le.cmake  armclang-aarch32-v8m-be.cmake  armclang-aarch32-v8m-le.cmake  armclang-aarch64-v8a-le.cmake  builds.sh  calculator-input-small.txt  calculator-input.txt  calculator.cpp  clang-aarch32-v7a-le.cmake  clang-aarch32-v8m-le.cmake  clang-aarch64-v8a-le.cmake  entry.S  fpregs.c  hello-world.c  quicksort.c  semihosting.c  semihosting.h
samples/source/calltests/: calltest32.S  calltest64.S
tests/: .gitattributes  .gitignore  CMakeLists.txt  argparse-help.ref  argparse-via-override.ref  argparse-via.txt  argparse.ref  btod.ref  calltree-quicksort-addr.json.ref  calltree-quicksort-addr.ref  calltree-quicksort-symbols.json.ref  calltree-quicksort-symbols.ref  exprtest.ref  exprtest.txt  flamegraph-quicksort-addr.ref  flamegraph-quicksort-symbols.ref  formattest.ref  imagetest-segments-content.ref  imagetest-segments.ref  indextest-bi.ref  indextest-li.ref  indextest.tarmac  parsertest-implicit-thumb.ref  parsertest-implicit-thumb.txt  parsertest.ref  parsertest.txt  profile-quicksort-addr.ref  profile-quicksort-symbols.ref  quicksort.elf  quicksort.tarmac  test-driver.py  ttu-import.ref  vcd-quicksort-function.ref  vcd-quicksort-nodate.ref  vcd-quicksort.ref
tests/calltests/: calltest32.elf  calltest32.ref  calltest32.tarmac  calltest64.elf  calltest64.ref  calltest64.tarmac
tests/truncate/: crash32.ref  crash32.tarmac  crash32m.ref  crash32m.tarmac  crash64.ref  crash64.tarmac  loop.ref  loop.tarmac  nontruncate.tarmac
tests/ttu-import/: CMakeLists.txt  ttu-import.cpp
tests/ttu-import/export-ttu/: CMakeLists.txt
tools/: CMakeLists.txt  argparsetest.cpp  avltest.cpp  btodtest.cpp  callinfo.cpp  calltree-json.cpp  calltree.cpp  calltreeviewer.cpp  exprtest.cpp  flamegraph.cpp  formattest.cpp  imagetest.cpp  indextool.cpp  main-callinfo.cpp  parsertest.cpp  profileinfo.cpp  profileinfo.hh  truncate.cpp  vcd.cpp  vcd.hh  vcdwriter.cpp  vcdwriter.hh
web/: README.md  app.css  app.js  calltree-viewer.html
